--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^4.1.1",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.10",
     "vue": "^2.5.11"
   },
   "browserslist": [
